Made iframe responsive, fixed <ul>'s
Made iFrame responsive for mobile & tablet devices while keeping YouTube's aspect ratio. If you leave it at the default embed it typically overflows on mobile devices. Made <ul>'s align left

--- a/styles.css
+++ b/styles.css
@@ -275,3 +275,25 @@
         grid-row: 6;
     }
 }
+
+/* Makes iframe responsive for mobile & tablet devices */
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
+ul {
+    text-align: left;
+}
